@@ -1,2 +1,8 @@
 # SING EMAIL GRABBER
 Grabs all attachments and inline images from the inbox and sorts and stores the images in a directory.
+
+This project was made with JDK 15.
+If compiling and running the source code does not work, use the following JVM options:
+```
+--module-path C:\Users\itllb\.jdks\javafx-sdk-11.0.2\lib --add-modules=javafx.controls,javafx.fxml,javafx.base
+```
